# developer-training-course-script-examples

./: Cargo.toml  README.md  capsule.toml
contracts/aggcounter/: Cargo.toml
contracts/aggcounter/src/: entry.rs  error.rs
contracts/aggdoublecounter/: Cargo.toml
contracts/aggdoublecounter/src/: entry.rs
contracts/always/: Cargo.toml
contracts/always/src/: main.rs
contracts/ckb500/: Cargo.toml
contracts/ckb500/src/: entry.rs
contracts/counter/: Cargo.toml
contracts/counter/src/: entry.rs  error.rs
contracts/data10/: Cargo.toml
contracts/data10/src/: entry.rs  error.rs
contracts/datacap/: Cargo.toml
contracts/datacap/src/: entry.rs  error.rs
contracts/datarange/: Cargo.toml
contracts/datarange/src/: entry.rs  error.rs
contracts/doublecounter/: Cargo.toml
contracts/doublecounter/src/: entry.rs  error.rs
contracts/fullcounter/: Cargo.toml
contracts/hashlock/: Cargo.toml
contracts/ic3type/: Cargo.toml
contracts/icclock/: Cargo.toml
contracts/icctype/: Cargo.toml
contracts/jsoncell/: Cargo.toml
contracts/never/: Cargo.toml
contracts/oc5type/: Cargo.toml
contracts/occlock/: Cargo.toml
contracts/odcounter/: Cargo.toml
contracts/oddoublecounter/: Cargo.toml
contracts/scounter/: Cargo.toml
contracts/sudt/: Cargo.toml
tests/: Cargo.toml
tests/src/: aggcounter.rs  aggdoublecounter.rs  ckb500.rs  counter.rs  data10.rs  datacap.rs  datarange.rs  doublecounter.rs  fullcounter.rs  hashlock.rs  ic3type.rs  icclock.rs  icctype.rs  jsoncell.rs  lib.rs  oc5type.rs  occlock.rs  odcounter.rs  oddoublecounter.rs  sudt.rs  tests.rs
(+25 files in other folders)
