[workspace]
members = ["tests", "contracts/always", "contracts/never", "contracts/ckb500", "contracts/occlock", "contracts/icclock", "contracts/hashlock", "contracts/counter", "contracts/jsoncell", "contracts/datacap", "contracts/data10"]

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
